fix spacing

--- a/styles.css
+++ b/styles.css
@@ -184,11 +184,11 @@
   border-radius: 5px;
   position: absolute;
   right: 27%;
-  padding-bottom: 15px;
+  padding-bottom: 5px;
 }
 
  .info {
-  padding-top: 45%;
+  padding-top: 30%;
 }
 
 .sun {
